<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/hii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hii_user"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_1"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="11dp"
        android:layout_margin="10dp"
        android:layout_above="@+id/cardview2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_colour">

            <TextView
                android:id="@+id/crop_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/crop_doctor"
                android:textAlignment="viewStart"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/plant_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/crop_doctor"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/card_colour"
                android:contentDescription="@string/todo"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/picture" />

            <TextView
                android:id="@+id/take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plant_image"
                android:layout_marginStart="25dp"
                android:text="@string/take_a_n_picture"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/arrow1"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_below="@+id/crop_doctor"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="3dp"

                android:layout_toEndOf="@+id/plant_image"
                android:background="@drawable/card_colour"
                android:src="@drawable/arrow"
                android:contentDescription="@string/todo1" />

            <ImageView
                android:id="@+id/diagnose_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/crop_doctor"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_toEndOf="@+id/arrow1"
                android:background="@drawable/card_colour"
                android:src="@drawable/diagnose"
                android:contentDescription="@string/todo2" />

            <TextView
                android:id="@+id/see_diagnosis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/diagnose_image"
                android:layout_marginStart="90dp"
                android:layout_toEndOf="@+id/take_picture"
                android:text="@string/see_ndiagnosis"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/arrow2"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_below="@+id/crop_doctor"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="2dp"
                android:layout_toEndOf="@+id/diagnose_image"
                android:background="@drawable/card_colour"
                android:src="@drawable/arrow"
                android:contentDescription="@string/todo3" />

            <ImageView
                android:id="@+id/medicine_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@id/crop_doctor"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@+id/arrow2"
                android:src="@drawable/medicine"
                android:contentDescription="@string/todo4" />

            <TextView
                android:id="@+id/get_medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/diagnose_image"
                android:layout_marginStart="68dp"
                android:layout_toEndOf="@+id/see_diagnosis"
                android:text="@string/get_nmedicine"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_below="@+id/see_diagnosis"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:text="@string/take_a_picture"
                android:textAllCaps="false"
                android:textSize="16sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="11dp"
        android:layout_margin="15dp"
        android:layout_above="@+id/bottom_navigation_view">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_colour">

    <TextView
        android:id="@+id/nutritions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/nutritions"
        android:textAlignment="viewStart"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fertilizer_button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_below="@+id/nutritions"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/card_colour"
        android:drawableStart="@drawable/fertilizer"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="@color/black"
        android:text="@string/fertilizer_ncalculator"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="18dp"
        app:strokeColor="@color/black"
        app:strokeWidth="5dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_below="@+id/nutritions"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_toEndOf="@+id/fertilizer_button"
        android:background="@drawable/card_colour"
        android:drawableStart="@drawable/rent"
        android:shadowColor="@color/black"
        android:text="@string/rent_in_nservices"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="18dp"
        app:strokeColor="@color/black"
        app:strokeWidth="5dp" />


</RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/card_colour"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/bottom_nav_menu" />




</RelativeLayout>

